fix some css on mobile (#17)

--- a/src/components/NewsletterSignUp/styles.module.css
+++ b/src/components/NewsletterSignUp/styles.module.css
@@ -1,15 +1,17 @@
 .social {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center !important;
   padding: 2rem 0;
   width: 100%;
+	margin: auto;
 }
 
 .row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+	margin: auto;
 }
 
 label.newsletter {
